Fix long text in alt popup to wrap to new line

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -6079,6 +6079,7 @@ a.status-card.compact:hover {
   max-width: 22em;
   max-height: 30em;
   overflow-y: auto;
+  word-break: break-all;
   h4 {
     font-size: 15px;
     line-height: 20px;
